# Data-Curator

./: .gitignore  CHANGELOG.md  Dockerfile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: main.yml
benchmarks/: RESULTS.md  fmp_mock_server.py  run_benchmark.py
docs/context/: lessons.md  memory.md  results.md  sesion-log.md  todo.md
docs/research/mx-fondos-yahoo/: ANALISIS.md  fondos_mx_yahoo.csv  fondos_mx_yahoo.json
docs/source/: conf.py  features_extension.py  index.rst
docs/source/api_reference/: cli.rst  custom_calcs.rst  features.rst
docs/source/data_providers/: index.rst
docs/source/user_guide/: component_integrator.rst  custom_calculator.rst  quick_start.rst  zero_coder.rst
docs/superpowers/plans/: 2026-06-09-html-config-editor.md  2026-06-09-parallel-fetch-pooled-http.md  2026-06-10-duckdb-output-handler.md  2026-06-17-macro-data-layer.md
docs/superpowers/specs/: 2026-06-09-html-config-editor-design.md  2026-06-09-parallel-fetch-pooled-http-design.md  2026-06-17-macro-data-layer-design.md  2026-06-17-macro-data-layer-proposal.md  2026-06-24-etf-browser-custom-lists-design.md
scripts/: build_macro_catalog.py
src/kaxanuk/data_curator/: __init__.py  __main__.py  data_curator.py
src/kaxanuk/data_curator/config_handlers/: __init__.py  _resolver.py  column_catalog.json  column_catalog.py  configurator_interface.py  etf_catalog.json  identifier_presets.json  json_configurator.py  macro_catalog.json  mx_fund_catalog.json
src/kaxanuk/data_curator/data_blocks/economic_indicators/: __init__.py
src/kaxanuk/data_curator/data_providers/: __init__.py  banxico_sie.py  data_provider_interface.py  dbnomics.py  financial_modeling_prep.py  fred.py  inegi.py  lseg_workspace.py  macro_data_provider_interface.py
src/kaxanuk/data_curator/entities/: __init__.py  configuration.py  economic_indicator_data.py  economic_indicator_row.py  market_data_daily_row.py
src/kaxanuk/data_curator/features/: calculations.py  helpers.py
src/kaxanuk/data_curator/modules/: data_column.py
src/kaxanuk/data_curator/output_handlers/: __init__.py  duckdb_output.py
src/kaxanuk/data_curator/services/: cli.py  column_builder.py  config_editor.py  config_editor_page.html  data_provider_toolkit.py  entity_helper.py
templates/data_curator/: __main__.py  json_entry_script.py
templates/data_curator/Config/: .env  custom_calculations.py  data_curator_parameters.json
tests/integration/lseg_workspace/: lseg_workspace_test.py
tests/unit/: data_curator_macro_test.py  data_curator_main_test.py  dockerfile_security_test.py
tests/unit/config_handlers/: column_catalog_test.py  exports_test.py  json_configurator_test.py  macro_resolver_test.py  resolver_test.py
tests/unit/data_blocks/: economic_indicator_data_block_test.py
tests/unit/data_providers/: banxico_sie_test.py  dbnomics_test.py  fake_macro_provider.py  fmp_account_plan_test.py  fred_test.py  inegi_test.py  macro_data_provider_interface_test.py  request_data_test.py
tests/unit/entities/: economic_indicator_data_test.py  market_data_daily_row_test.py
tests/unit/features/: calculations_test.py  helpers_test.py
tests/unit/modules/data_column/: boolean_test.py  conversion_test.py
tests/unit/output_handlers/: output_handlers_test.py
tests/unit/services/: cli_test.py  column_builder_macro_test.py  config_editor_test.py
tests/unit/services/column_builder/: non_instance_methods_test.py
tests/unit/services/data_provider_toolkit/: data_provider_toolkit_test.py
